<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:background="@drawable/rounded_cornerchangepassword"
    android:layout_height="wrap_content"
    android:gravity="center">

 <LinearLayout
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:padding="5dp"
     android:layout_gravity="center">
  <TextView
      android:text="@string/changeyour"
      android:textColor="@color/brown"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="5dp"
      android:layout_gravity="center"
      android:textSize="20dp" />
 <!--<TextView
  android:textColor="@color/list_background"

  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:text="@string/current_password"
     android:textSize="15dp"
     android:layout_marginLeft="3dp" />-->
 <android.support.design.widget.TextInputLayout
      android:id="@+id/input_layout_Current"
     app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
     <com.subhrajyoti.passwordview.PasswordView
         android:textColor="@color/black"
         android:selectAllOnFocus="true"
         android:id="@+id/input_current"
         android:cursorVisible="true"
         android:inputType="textPassword"
         android:hint="@string/current_password"
         android:textColorHint="@color/list_background"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:strikeThrough="true"
         app:eyeTint="@color/input_register_hint"
         android:layout_margin="3dp"
         android:textSize="15dp"
         />
</android.support.design.widget.TextInputLayout>
<!-- <TextView

     android:textColor="@color/list_background"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="@string/new_password"
     android:textSize="15dp"
     android:layout_marginLeft="3dp" />-->
  <android.support.design.widget.TextInputLayout
      android:id="@+id/input_layout_new"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
      <com.subhrajyoti.passwordview.PasswordView
          android:textColor="@color/black"
          app:strikeThrough="true"
          android:id="@+id/input_new"
          android:cursorVisible="true"
          android:textColorHint="@color/list_background"
          android:inputType="textPassword"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_margin="3dp"
          app:eyeTint="@color/input_register_hint"
          android:hint="@string/new_password"
          android:textSize="15dp" />
  </android.support.design.widget.TextInputLayout>
 <!--<TextView
     android:textColor="@color/list_background"
     android:id="@+id/input_name"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="@string/confirm_password"
     android:textSize="15dp"
     android:layout_marginLeft="3dp" />-->
  <android.support.design.widget.TextInputLayout
      android:id="@+id/input_layout_confirm"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
      <com.subhrajyoti.passwordview.PasswordView
          android:textColor="@color/black"
          android:selectAllOnFocus="true"
          android:id="@+id/input_confirm"
          android:cursorVisible="true"
          android:inputType="textPassword"
          android:hint="@string/confirm_password"
          android:textColorHint="@color/list_background"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          app:strikeThrough="true"
          app:eyeTint="@color/input_register_hint"
          android:layout_margin="3dp"
          android:textSize="15dp" />
  </android.support.design.widget.TextInputLayout>
<RelativeLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:padding="5dp">
 <Button
    android:id="@+id/cancel"
    android:background="@drawable/rounded_corner"
     android:textColor="@color/white"
     android:text="@string/cancel"
    android:layout_width="120dp"
    android:layout_height="30dp"
     android:padding="5dp"
     android:textSize="15dp"
     android:gravity="center" />
  <Button
      android:textColor="@color/white"
      android:id="@+id/summit"
      android:background="@drawable/rounded_corner"
      android:text="@string/submit"
      android:layout_width="120dp"
      android:layout_height="30dp"
      android:layout_marginLeft="30dp"
      android:layout_marginStart="30dp"
      android:layout_alignParentTop="true"
      android:layout_toRightOf="@+id/cancel"
      android:padding="5dp"
      android:textSize="15dp"
      android:gravity="center" />
</RelativeLayout>
 </LinearLayout>
</RelativeLayout>